feat: split liveness and readiness checks
